<resources>
    <string name="app_name">Dragon Boating</string>
    <string name="sound_setting">Ticks: </string>
    <string name="main_title">Enter the times</string>
    <string name="time_1">Main Time (s)</string>
    <string name="rate_1">Main BPM</string>
    <string name="time_2">Secondary Time (s)</string>
    <string name="rate_2">Secondary BPM</string>
    <string name="time_3">Rest Time (s)</string>
    <string name="rate_3">Rest BPM</string>
    <string name="button_start">START</string>
    <string name="text_set">Sets: </string>
    <string name="result_title">Results</string>
    <string name="result_time">Total time in this part: </string>
    <string name="result_bpm">Total strokes in this part: </string>
    <string name="result_total_time">Total time: </string>
    <string name="result_total_bpm">Total strokes: </string>
    <string name="result_average_bpm">Total Average BPM: </string>
    <string name="result_total">Total</string>
    <string name="result_main">Main Part</string>
    <string name="result_secondary">Secondary Part</string>
    <string name="result_rest">Rest Part</string>
</resources>
